Uniform images and mount names.

--- a/distributed/librenms-recreate.yaml
+++ b/distributed/librenms-recreate.yaml
@@ -34,7 +34,7 @@ spec:
     spec:
       initContainers:
       - name: init-librenmsdb
-        image: jarischaefer/docker-librenms
+        image: jarischaefer/docker-librenms:latest
         env:
         - name: DB_HOST
           value: "mysql"
@@ -56,7 +56,7 @@ spec:
         - "cd /opt/librenms && php /opt/librenms/build-base.php && php /opt/librenms/adduser.php admin admin 10 test@example.com"
       containers:
       - name: librenms
-        image: jarischaefer/docker-librenms
+        image: jarischaefer/docker-librenms:latest
         env:
         - name: DB_HOST
           value: "mysql"
@@ -80,7 +80,7 @@ spec:
         - name: librenms-https
           containerPort: 443
         volumeMounts:
-        - name: librelogs
+        - name: librenms-logs
           mountPath: /opt/librenms/logs
         # - name: libressl
           # mountPath: /etc/nginx/ssl
@@ -113,7 +113,7 @@ spec:
               path: distributed_poller.php
   volumeClaimTemplates:
   - metadata:
-      name: librelogs
+      name: librenms-logs
     spec:
       accessModes: ["ReadWriteOnce"]
       resources:
