--- a/distributed/memcached-statefulset.yaml
+++ b/distributed/memcached-statefulset.yaml
@@ -36,13 +36,13 @@ spec:
           # requests:
             # cpu: 500m
             # memory: 1Gi
-        # readinessProbe:
-          # tcpSocket:
-            # port: 80
-          # initialDelaySeconds: 5
-          # periodSeconds: 10
-        # livenessProbe:
-          # tcpSocket:
-            # port: 80
-          # initialDelaySeconds: 15
-          # periodSeconds: 20
+        readinessProbe:
+          tcpSocket:
+            port: 11211
+          initialDelaySeconds: 5
+          periodSeconds: 10
+        livenessProbe:
+          tcpSocket:
+            port: 11211
+          initialDelaySeconds: 15
+          periodSeconds: 20
